# memfabric_hybrid

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.en.md  README.md  build.sh
example/ShiftPutGet/: CMakeLists.txt  README.md  build.sh  data_utils.h  main.cpp  run.sh  shm_all_shift.cpp
example/ShiftPutGet/cmake/: npu_lib.cmake
example/bm/BmBenchmark/: CMakeLists.txt  README.md  band_width_calculator.cpp  band_width_calculator.h  barrier_util.h  build_bm_perf_benchmark.sh  common_def.h  main.cpp
example/bm/BmCpp/: CMakeLists.txt  README.md  barrier_util.h  build_bm_cpp_test.sh  main.cpp
example/decrypt/: CMakeLists.txt  README.md  build.sh  decrypt_example.cpp
example/shm/ShiftPutGet/: CMakeLists.txt  README.md  build.sh  data_utils.h  main.cpp  run.sh  shm_all_shift.cpp  shm_all_shift.h
example/trans/perf/: CMakeLists.txt  README.md  run.sh  transfer_perf.cpp
src/: CMakeLists.txt
src/acc_links/csrc/: CMakeLists.txt  acc_entry.cpp  acc_tcp_client_default.cpp  acc_tcp_client_default.h  acc_tcp_common.cpp  acc_tcp_common.h  acc_tcp_link_complex_default.cpp  acc_tcp_link_complex_default.h  acc_tcp_link_default.h  acc_tcp_link_delay_cleanup.h  acc_tcp_listener.cpp  acc_tcp_listener.h  acc_tcp_request_context.cpp  acc_tcp_server.cpp  acc_tcp_server_default.cpp  acc_tcp_server_default.h  acc_tcp_shared_buf.cpp  acc_tcp_worker.cpp  acc_tcp_worker.h
src/acc_links/csrc/common/: acc_common_util.cpp  acc_common_util.h  acc_file_validator.cpp  acc_file_validator.h  acc_includes.h  acc_out_logger.h
src/acc_links/csrc/security/: acc_tcp_ssl_helper.cpp  acc_tcp_ssl_helper.h
src/acc_links/include/: acc_def.h  acc_log.h  acc_ref.h  acc_tcp_client.h  acc_tcp_link.h  acc_tcp_request_context.h  acc_tcp_server.h  acc_tcp_shared_buf.h
src/driver/include/: hybm_gvm_cmd.h
src/driver/kernel/agent/: Makefile  hybm_gvm_agent.c  hybm_gvm_agent_msg.h
src/driver/kernel/host/: Makefile
src/driver/kernel/include/: hybm_gvm_agent_msg.h  hybm_gvm_log.h  hybm_gvm_proc_info.h
src/driver/userspace/: CMakeLists.txt
src/driver/userspace/csrc/: hybm_gvm_user.cpp
src/driver/userspace/include/: hybm_gvm_user.h
src/hybm/csrc/: CMakeLists.txt  hybm_big_mem_entry.cpp  hybm_data_op_entry.cpp  hybm_driver.cpp  hybm_entry.cpp
src/hybm/csrc/common/: hybm_common_include.h  hybm_define.h  hybm_functions.cpp  hybm_functions.h  hybm_logger.h  hybm_networks_common.cpp  hybm_networks_common.h  hybm_ptracer.h  hybm_rbtree_range_pool.cpp  hybm_rbtree_range_pool.h  hybm_space_allocator.h  hybm_str_helper.h  hybm_task_info_base.h  hybm_types.h  hybm_version.h  rbtree_range_pool.cpp  rbtree_range_pool.h  space_allocator.h
src/hybm/csrc/copy_extend/: hybm_copy_kernel.cpp
src/hybm/csrc/data_operation/: hybm_data_operator.cpp  hybm_data_operator.h
src/hybm/csrc/driver/: hybm_cmd.h  hybm_driver.h  hybm_gva.cpp  hybm_gva.h  hybm_gva_version.cpp  hybm_gva_version.h
src/hybm/csrc/entity/: hybm_entity.h  hybm_entity_compose.cpp  hybm_entity_default.cpp  hybm_entity_default.h  hybm_entity_factory.cpp  hybm_entity_factory.h  hybm_entity_tag_info.cpp  hybm_entity_tag_info.h
src/hybm/csrc/mm/: hbym_device_user_mem_seg.cpp  hbym_device_user_mem_seg.h  hybm_conn_based_segment.cpp  hybm_conn_based_segment.h  hybm_dev_legacy_segment.cpp  hybm_dev_legacy_segment.h  hybm_ex_info_transfer.h  (+21 more)
src/hybm/include/: hybm.h  hybm_big_mem.h  hybm_data_op.h  hybm_def.h  hybm_transport.h
src/memcache/csrc/: CMakeLists.txt  mmc.cpp  mmc_client.cpp  mmc_service.cpp  mmcache_store.cpp  mmcache_store.h
src/memcache/include/: mmc.h  mmc_client.h  mmc_def.h  mmc_service.h
src/memcache/python/: setup.py
src/mobs/csrc/: CMakeLists.txt  mobs.cpp  mobs_client.cpp  mobs_service.cpp
src/mobs/include/: mobs.h  mobs_client.h  mobs_def.h  mobs_service.h
src/mooncake_adapter/csrc/: CMakeLists.txt
src/mooncake_adapter/python/: setup.py
src/net/: CMakeLists.txt
src/net/acc_links/: CMakeLists.txt
src/smem/csrc/: CMakeLists.txt  smem.cpp
src/smem/python/: CMakeLists.txt  pysmem.cpp  setup.py
src/util/csrc/: mf_file_util.h  mf_ipv4_validator.h  mf_monotonic_time.h  mf_net.h  mf_num_util.h  mf_numa_util.h  mf_out_logger.h  mf_rwlock.h  mf_spinlock.h  mf_str_util.h  mf_syntactic_sugar.h  mf_tls_def.h  mf_tls_util.h
src/util/include/: mf_tls_def.h
src/utils/: common_locker.h  file_util.h  mf_file_util.h  mf_net.h  mf_num_util.h  mf_out_logger.h  mf_string_util.h  string_util.h
test/: CMakeLists.txt
test/acc_link_fuzz/: CMakeLists.txt  dt_fuzz.h  fuzz_main.cpp  test_acc_tcp_client.cpp  test_acc_tcp_ssl.cpp
test/certs/: generate_client_cert.py  generate_crl.py  generate_root_cert.py  generate_server_cert.py
test/example/memcache_cpp_test/: CMakeLists.txt  memcache_cpp_test.cpp
test/fuzz/: CMakeLists.txt  dt_fuzz.cpp  dt_fuzz.h  fuzz_main.cpp  secode_fuzz.sh
test/fuzz/acc_links/: test_acc_tcp_client.cpp  test_acc_tcp_ssl.cpp
test/fuzz/hybm/: hybm_data_op_test.cpp  hybm_test.cpp
test/fuzz/memcache/: CMakeLists.txt  memcache_client_test.cpp  memcache_fuzz_common.h  memcache_service_test.cpp  memcache_stubs.cpp  memcache_stubs.h  memcache_test.cpp
test/fuzz/smem/: smem_test.cpp
test/k8s_deploy/: interactive_app.py  local-pods-demo.yaml  meta-cluster-ip-demo.yaml  meta-pods-demo.yaml
test/llt/: CMakeLists.txt
test/llt/testcase/: test_acc_tcp_client.cpp  test_acc_tcp_ssl_helper.cpp
test/python/hybm/: data_op_all_path_test.py
test/python/memcache/: test_mmc_batch.py  test_mmc_demo.py  test_mmc_layers.py  test_mmc_layers_batch.py  test_mmc_meta_service.py  test_mmc_meta_service_default.py  test_mmc_put_replicate_config.py
test/python/mock_server/: server.py
test/python/tensor/: README.md  copy_consistency_test.py
test/stub/openssl/: crypto_stub.cpp  ssl_stub.cpp
test/ut/: CMakeLists.txt  ut_main.cpp
test/ut/mock/: CMakeLists.txt  acl_stub.cpp  hal_stub.cpp  ra_stub.cpp  tsd_stub.cpp  version.info
test/ut/openssl_cert/: key_pwd.txt
test/ut/stub/: hybm_gva_stub.cpp  hybm_stub.cpp  hybm_stub.h
test/ut/testcase/: CMakeLists.txt  smem_test.cpp  store_test.cpp  ut_barrier_util.h
(+665 files in other folders)
